--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
   </head>
   <body>
     <section class="page-header">
-      <h1 class="project-name">Tech Learner</h1>
-      <h2 class="project-tagline">Repositories of Shiju K Babu</h2>
+      <h1 class="project-name">Learnings</h1>
+      <h2 class="project-tagline">Repositories- AngularJS</h2>
     </section>
 
     <section class="main-content">
